--- a/my-project/src/app/globals.css
+++ b/my-project/src/app/globals.css
@@ -27,15 +27,37 @@ body {
 .hero-bg::before {
   content: "";
   position: absolute;
-  inset: 0; /* top:0; right:0; bottom:0; left:0; */
+  inset: 0;
   background-image: url("../assets/images/hero-bg.webp");
   background-size: cover;
   background-position: center;
   filter: grayscale(100%);
-  z-index: 0; /* behind content */
+  z-index: 0; 
 }
 
 .hero-bg > * {
   position: relative;
-  z-index: 1; /* ensure children appear above background */
+  z-index: 1;
+}
+
+/* CSS for brands logo marque below hero section */
+
+.marquee {
+  display: flex;
+  gap: 32px;
+  animation: marquee 10s  infinite;
+}
+  
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-10%); /* scroll by half the content width */
+  }
+}
+
+.animate-marquee {
+  animation: marquee 50s  infinite;
 }
